# PICOPerformanceTest

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE
cmake/: embed_spirv.cmake
cpp/: common.hpp  main.cpp  mesh.cpp  mesh.hpp  openxr_setup.cpp  openxr_setup.hpp  pipelines.cpp  pipelines.hpp  render.cpp  render.hpp  vk_resources.cpp  vk_resources.hpp
project/android/: AndroidManifest.xml  build.gradle  settings.gradle
shaders/: backface_cull.comp  culling.comp  depth_invert.frag  fragment.frag  hiz_downsample.comp  hiz_naive_init.comp  hiz_naive_step.comp  hiz_spd.comp  hybrid_cull.comp  meshlet_aabb_debug.frag  meshlet_aabb_debug.vert  motion_vector.frag  motion_vector.vert  pre_skin.comp  skin_cull.comp  skin_cull_lds.comp  skin_cull_lds_u16.comp  vertex.vert  vertex_vs_skin.vert
